#  $Id: Makefile.am,v 1.26 2001/05/22 16:10:11 grumbel Exp $
#
#  Pingus - A free Lemmings clone
#  Copyright (C) 1999 Ingo Ruhnke <grumbel@gmx.de>
#
#  This program is free software; you can redistribute it and/or
#  modify it under the terms of the GNU General Public License
#  as published by the Free Software Foundation; either version 2
#  of the License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

pkgdatadir = $(datadir)/games/@PACKAGE@/images

EXTRA_DIST = core/cursors/editor.png \
core/cursors/cursor.png \
core/cursors/scroll.png \
core/cursors/cap.png \
core/cursors/capwrong.png \
core/cursors/cross.png \
core/cursors/arrow_right.png \
core/cursors/arrow_left.png \
core/editor/start_pos.png \
core/editor/weather_rain.png \
core/editor/weather_snow.png \
core/editor/tb_copy.png \
core/editor/tb_new.png \
core/editor/tb_open.png \
core/editor/tb_save.png \
core/editor/tb_exit.png \
core/editor/tb_clock_run.png \
core/editor/tb_edit.png \
core/editor/tb_preferences.png \
core/editor/tb_help.png \
core/editor/tb_trash.png \
core/editor/tb_index.png \
core/editor/region-zoom.png \
core/editor/zoom-in.png \
core/editor/zoom-out.png \
core/editor/button.png \
core/editor/button_pressed.png \
core/editor/logo.png \
core/buttons/back.png \
core/buttons/pause.png \
core/buttons/fast_forward.png \
core/buttons/armageddon_anim.png \
core/menu/create_on.png \
core/menu/credits_on.png \
core/menu/exit_on.png \
core/menu/ice_off.png \
core/menu/options_on.png \
core/menu/play_on.png \
core/menu/multi_on.png \
core/menu/layer1.png \
core/menu/layer2.png \
core/menu/layer3.png \
core/menu/layer4.png \
core/menu/layer5.png \
core/misc/404.png \
core/misc/logo.png \
core/misc/loading.png \
core/misc/pingubw.png \
core/worldmap/dot_green.png \
core/worldmap/dot_red.png \
core/worldmap/dot_border.png \
core/misc/smallmap_entrance.png \
core/misc/smallmap_exit.png \
core/misc/flag0.png \
core/misc/flag1.png \
core/misc/flag2.png \
core/misc/flag3.png \
core/worldmap/dot_green.png \
core/worldmap/dot_red.png \
core/worldmap/dot_border.png \
core/worldmap/flaggreen.png \
core/editor/start_pos.png \
core/editor/weather_rain.png \
core/editor/weather_snow.png \
core/editor/tb_copy.png \
core/editor/tb_new.png \
core/editor/tb_open.png \
core/editor/tb_save.png \
core/editor/tb_exit.png \
core/editor/tb_clock_run.png \
core/editor/tb_edit.png \
core/editor/tb_preferences.png \
core/editor/tb_help.png \
core/editor/tb_trash.png \
core/editor/tb_index.png \
core/editor/region-zoom.png \
core/editor/zoom-in.png \
core/editor/zoom-out.png \
entrances/entrance.png \
entrances/generic.png \
entrances/woodthing_nmov.png \
entrances/woodthing_mov.png \
entrances/cloudent.png \
entrances/space.png \
entrances/wood_bottom.png \
entrances/wood_top.png \
entrances/eyes_entrance.png \
entrances/eyes_entrance_anim.png \
entrances/eyes_underlay.png \
entrances/industrial.png \
entrances/industrial_top.png \
exits/desert_tut.png \
exits/ice.png \
exits/stone.png \
exits/desertexit.png \
exits/space.png \
exits/sweetexit.png \
exits/sortie.png \
exits/sortie_anim.png \
exits/industrial.png \
exits/crystal.png \
fonts/number_fnt.png \
fonts/courier.png \
fonts/courier_h.png \
fonts/smallfont.png \
fonts/smallfont_h.png \
fonts/font.png \
fonts/courier_small2.png \
fonts/pingus2.png \
fonts/pingus_small3.png \
fonts/xterm.pcx \
core/misc/loading.png \
core/misc/pingubw.png \
core/misc/404.png \
core/worldmap/dot_green.png \
core/worldmap/dot_red.png \
core/worldmap/dot_border.png \
core/cursors/editor.png \
core/cursors/cursor.png \
core/cursors/scroll.png \
core/cursors/cap.png \
core/cursors/capwrong.png \
core/cursors/cross.png \
core/cursors/arrow_right.png \
core/cursors/arrow_left.png \
core/misc/smallmap_entrance.png \
core/misc/smallmap_exit.png \
backgrounds/large_star.png \
backgrounds/middle_star.png \
backgrounds/small_star.png \
liquids/water_cmap.png \
liquids/water.png \
liquids/water2.png \
liquids/water3.png \
liquids/water4.png \
liquids/water3.png \
liquids/swater.png \
liquids/lava.png \
liquids/slime.png \
hotspots/space/engine.png \
groundpieces/ground/signposts/danger.png \
groundpieces/ground/misc/colum.png \
groundpieces/ground/misc/colum_flat.png \
groundpieces/ground/desert/column_piece1.png \
groundpieces/ground/desert/column_piece2.png \
groundpieces/ground/desert/column_piece3.png \
groundpieces/ground/misc/stone0.png \
groundpieces/ground/misc/stone1.png \
groundpieces/ground/misc/stone2.png \
groundpieces/ground/snow/cabin.png \
groundpieces/ground/snow/cabin_winter.png \
groundpieces/ground/misc/dragon.png \
groundpieces/ground/desert/pillar1.png \
groundpieces/ground/desert/pillar2.png \
groundpieces/ground/desert/pillar3.png \
groundpieces/solid/misc/metalplate_horiz.png \
groundpieces/solid/misc/metalplate_large.png \
groundpieces/solid/misc/metalplate_small.png \
hotspots/signposts/basher.png \
hotspots/signposts/blocker.png \
hotspots/signposts/bomber.png \
hotspots/signposts/bridger.png \
hotspots/signposts/climber.png \
hotspots/signposts/digger.png \
hotspots/signposts/floater.png \
hotspots/signposts/miner.png \
hotspots/signposts/nogo.png \
groundpieces/ground/misc/bpiece1.png \
groundpieces/ground/misc/bpiece2.png \
groundpieces/ground/misc/bpiece3.png \
groundpieces/ground/misc/bpiece4.png \
groundpieces/ground/misc/bpiece5.png \
groundpieces/ground/misc/bpiece6.png \
groundpieces/ground/misc/grey_stone1.png \
groundpieces/ground/misc/grey_stone2.png \
groundpieces/ground/misc/grey_stone3.png \
groundpieces/ground/misc/grey_stone4.png \
groundpieces/ground/misc/grey_stone5.png \
groundpieces/ground/misc/green1.png \
groundpieces/ground/misc/green2.png \
groundpieces/ground/industrial/pipe1.png \
groundpieces/ground/industrial/pipe2.png \
groundpieces/ground/industrial/pipe4.png \
groundpieces/ground/industrial/pipe5.png \
groundpieces/ground/industrial/pipe_ul.png \
groundpieces/ground/industrial/pipe_ur.png \
groundpieces/ground/industrial/pipe_bl.png \
groundpieces/ground/industrial/pipe_br.png \
groundpieces/ground/jungle/branch1.png \
groundpieces/ground/jungle/branch2.png \
groundpieces/ground/jungle/branch3.png \
groundpieces/ground/jungle/branch4.png \
groundpieces/ground/jungle/branch5.png \
groundpieces/ground/jungle/branch6.png \
groundpieces/ground/jungle/carabatree.png \
groundpieces/ground/jungle/carabatreemedium.png \
groundpieces/ground/jungle/carabatreesmall.png \
groundpieces/ground/jungle/twist.png \
groundpieces/ground/jungle/twistsmooth.png \
groundpieces/ground/jungle/stick1.png \
groundpieces/ground/jungle/stick2.png \
groundpieces/ground/jungle/stick3.png \
groundpieces/ground/jungle/stick4.png \
groundpieces/ground/jungle/stick5.png \
groundpieces/ground/crystal/block.png \
groundpieces/ground/crystal/column.png \
groundpieces/ground/crystal/diagcrystal.png \
groundpieces/ground/crystal/hexcrystal.png \
groundpieces/ground/crystal/horiz.png \
groundpieces/ground/crystal/horiz2.png \
groundpieces/ground/crystal/pipe.png	 \
groundpieces/ground/crystal/pipeend.png \
groundpieces/ground/crystal/platform.png \
groundpieces/ground/crystal/platform2.png \
groundpieces/ground/crystal/pointleft.png \
groundpieces/ground/crystal/pointright.png \
groundpieces/ground/crystal/skinnycrystal.png \
groundpieces/ground/crystal/smcrystal.png \
groundpieces/ground/crystal/tesselate.png \
groundpieces/ground/snow/snowman.png \
groundpieces/ground/snow/xmas-tree.png \
groundpieces/ground/snow/piece1.png \
groundpieces/ground/snow/slopedr.png \
groundpieces/ground/snow/piece2.png \
groundpieces/ground/snow/piece3.png \
groundpieces/ground/snow/ice1.png \
groundpieces/ground/snow/ice2.png \
groundpieces/ground/snow/igloo.png \
groundpieces/ground/real/real1.png \
groundpieces/ground/real/real2.png \
groundpieces/ground/real/real3.png \
groundpieces/ground/real/real4.png \
groundpieces/ground/real/real5.png \
groundpieces/ground/real/real6.png \
groundpieces/ground/real/real7.png \
groundpieces/ground/real/real8.png \
groundpieces/ground/real/real9.png \
groundpieces/ground/real/real10.png \
groundpieces/ground/real/real11.png \
groundpieces/ground/real/real12.png \
groundpieces/ground/real/real13.png \
groundpieces/ground/real/real14.png \
groundpieces/ground/real/real15.png \
groundpieces/ground/real/real16.png \
groundpieces/ground/real/real17.png \
groundpieces/ground/real/real18.png \
groundpieces/ground/real/real19.png \
groundpieces/ground/real/real20.png \
groundpieces/ground/real/real21.png \
groundpieces/ground/real/real22.png \
groundpieces/ground/real/real23.png \
groundpieces/ground/real/real24.png \
groundpieces/ground/real/real25.png \
groundpieces/ground/real/real26.png \
groundpieces/ground/real/real27.png \
groundpieces/ground/real/real28.png \
groundpieces/ground/real/real29.png \
groundpieces/ground/real/real30.png \
groundpieces/ground/rock/blackrock1.png \
groundpieces/ground/rock/blackrock2.png \
groundpieces/ground/rock/blackrock3.png \
groundpieces/ground/rock/blackrock4.png \
groundpieces/ground/real/real35.png \
groundpieces/ground/real/real36.png \
groundpieces/ground/real/real37.png \
groundpieces/ground/real/fish.png \
groundpieces/ground/real/green1.png \
groundpieces/ground/real/green2.png \
groundpieces/solid/rock/granit1.png \
groundpieces/solid/rock/granit2.png \
groundpieces/solid/rock/granit3.png \
groundpieces/solid/rock/granit4.png \
groundpieces/solid/rock/granit5.png \
groundpieces/solid/rock/granit6.png \
groundpieces/ground/rock/rock1.png \
groundpieces/ground/rock/rock2.png \
groundpieces/ground/rock/rock3.png \
groundpieces/ground/rock/rock4.png \
groundpieces/ground/rock/rock5.png \
groundpieces/ground/rock/rock6.png \
groundpieces/ground/test/test1.png \
groundpieces/ground/test/test2.png \
groundpieces/ground/test/test3.png \
groundpieces/ground/test/test4.png \
groundpieces/ground/test/test5.png \
groundpieces/ground/test/test6.png \
groundpieces/ground/foliage/flax1.png \
groundpieces/ground/foliage/flax2.png \
groundpieces/ground/foliage/midtree1.png \
groundpieces/ground/foliage/midtree2.png \
groundpieces/ground/foliage/oak1.png \
groundpieces/ground/foliage/smallbush.png \
groundpieces/ground/foliage/smallbush2.png \
groundpieces/ground/foliage/smallbush3.png \
groundpieces/ground/foliage/talltree.png \
groundpieces/transparent/foliage/turfconcave.png \
groundpieces/transparent/foliage/turfflat.png \
groundpieces/transparent/foliage/turfslopeleft.png \
groundpieces/transparent/foliage/turfslopeleft20.png \
groundpieces/transparent/foliage/turfsloperight.png \
groundpieces/transparent/foliage/turfsloperight20.png \
groundpieces/transparent/foliage/turfsmallbump.png \
groundpieces/transparent/foliage/turfsmallnook.png \
groundpieces/transparent/foliage/turftufty.png \
groundpieces/ground/mushroom/toadstool1.png \
groundpieces/ground/mushroom/toadstool2.png \
groundpieces/ground/mushroom/toadstool3.png \
groundpieces/ground/mushroom/toadstool4.png \
groundpieces/ground/sweets/allsort1.png \
groundpieces/ground/sweets/allsort2.png \
groundpieces/ground/sweets/aquachoc.png \
groundpieces/ground/sweets/canestalk.png \
groundpieces/ground/sweets/canestub.png \
groundpieces/ground/sweets/canetop.png \
groundpieces/ground/sweets/chocbar.png \
groundpieces/ground/sweets/chocbloc.png \
groundpieces/ground/sweets/chocbloc-lowleft.png \
groundpieces/ground/sweets/chocbloc-lowright.png \
groundpieces/ground/sweets/chocbloc-topleft.png \
groundpieces/ground/sweets/chocbloc-topright.png \
groundpieces/ground/sweets/goldchoc.png \
groundpieces/ground/sweets/greenjellybaby.png \
groundpieces/ground/sweets/icecream.png \
groundpieces/ground/sweets/icecream.png \
groundpieces/ground/sweets/jube1.png \
groundpieces/ground/sweets/jube2.png \
groundpieces/ground/sweets/lollipop.png \
groundpieces/ground/sweets/lollipop.png \
groundpieces/ground/sweets/lollipop-purp.png \
groundpieces/ground/sweets/lollipop-purp.png \
groundpieces/ground/sweets/mmblue.png \
groundpieces/ground/sweets/mmbrown.png \
groundpieces/ground/sweets/mmred.png \
groundpieces/ground/sweets/mmyellow.png \
groundpieces/ground/sweets/purpchoc.png \
groundpieces/ground/sweets/purplechoc.png \
groundpieces/ground/sweets/redjellybaby.png \
groundpieces/ground/sweets/cake1.png \
groundpieces/ground/sweets/cake2.png \
groundpieces/ground/sweets/cake3.png \
groundpieces/ground/sweets/cake4.png \
groundpieces/ground/sweets/cake5.png \
groundpieces/bridge/misc/bridge_left.png \
groundpieces/bridge/misc/bridge_right.png \
groundpieces/ground/desert/bigprickpiece.png \
groundpieces/ground/desert/middleprickpiece.png \
groundpieces/ground/desert/smallbrickpiece.png \
groundpieces/ground/misc/bridge1.png \
groundpieces/ground/misc/spike.png \
groundpieces/ground/snow/piece1.png \
groundpieces/ground/misc/piece2.png \
groundpieces/ground/snow/piece3.png \
groundpieces/ground/snow/piece7.png \
groundpieces/ground/snow/piece8.png \
groundpieces/ground/snow/piece9.png \
groundpieces/ground/misc/brick1.png \
groundpieces/ground/misc/brick2.png \
groundpieces/ground/misc/brick3.png \
groundpieces/ground/misc/brick4.png \
groundpieces/ground/misc/stoneblock1.png \
groundpieces/ground/misc/stoneblock2.png \
groundpieces/ground/misc/stoneblock3.png \
groundpieces/ground/misc/stoneblock5.png \
groundpieces/ground/misc/stoneblock6.png \
groundpieces/ground/misc/pfosten.png \
groundpieces/bridge/space/grid1.png \
groundpieces/bridge/space/grid2.png \
groundpieces/bridge/space/grid3.png \
groundpieces/ground/space/smallblock1.png \
groundpieces/ground/space/smallblock2.png \
groundpieces/ground/space/smallblock3.png \
groundpieces/ground/space/diagonal.png \
groundpieces/ground/space/diagonalr.png \
groundpieces/ground/space/block1.png \
groundpieces/ground/space/tower1.png \
groundpieces/ground/space/smalltower.png \
groundpieces/ground/desert/sluggydu.png \
groundpieces/ground/desert/blobdune.png \
groundpieces/ground/desert/domedune.png \
groundpieces/ground/desert/flatdune.png \
groundpieces/ground/desert/peakdune.png \
groundpieces/ground/desert/bigblock-broken1.png \
groundpieces/ground/desert/bigblock-broken2.png \
groundpieces/ground/desert/bigdune1.png \
groundpieces/ground/desert/bigprickpiece.png \
groundpieces/ground/desert/middleprickpiece.png \
groundpieces/ground/desert/smallbrickpiece.png \
groundpieces/ground/desert/pillar1.png \
groundpieces/ground/desert/pillar2.png \
groundpieces/ground/desert/pillar3.png \
groundpieces/ground/sortie/column.png \
groundpieces/ground/sortie/column2.png \
groundpieces/ground/sortie/column3.png \
groundpieces/ground/sortie/plate_forme.png \
groundpieces/ground/sortie/plate_forme_left.png \
groundpieces/ground/sortie/plate_forme_right.png \
groundpieces/transparent/industrial/gunge1.png \
groundpieces/transparent/industrial/gunge10.png \
groundpieces/transparent/industrial/gunge11.png \
groundpieces/transparent/industrial/gunge12.png \
groundpieces/transparent/industrial/gunge13.png \
groundpieces/transparent/industrial/gunge14.png \
groundpieces/transparent/industrial/gunge15.png \
groundpieces/transparent/industrial/gunge2.png \
groundpieces/transparent/industrial/gunge3.png \
groundpieces/transparent/industrial/gunge4.png \
groundpieces/transparent/industrial/gunge5.png \
groundpieces/transparent/industrial/gunge6.png \
groundpieces/transparent/industrial/gunge7.png \
groundpieces/transparent/industrial/gunge8.png \
groundpieces/transparent/industrial/gunge9.png \
groundpieces/solid/industrial/steel1.png \
groundpieces/solid/industrial/steel2.png \
groundpieces/solid/industrial/steel3.png \
groundpieces/solid/industrial/steel4.png \
groundpieces/solid/industrial/steel5.png \
groundpieces/solid/industrial/greybri1.png \
groundpieces/solid/industrial/greybri2.png \
groundpieces/solid/industrial/greybri3.png \
groundpieces/solid/industrial/greybri5.png \
groundpieces/solid/industrial/screw.png \
groundpieces/solid/industrial/rivet.png \
groundpieces/ground/industrial/pipe1.png \
groundpieces/ground/industrial/pipe2.png \
groundpieces/ground/industrial/pipe4.png \
groundpieces/ground/industrial/pipe5.png \
groundpieces/ground/industrial/pipe_ul.png \
groundpieces/ground/industrial/pipe_ur.png \
groundpieces/ground/industrial/pipe_bl.png \
groundpieces/ground/industrial/pipe_br.png \
groundpieces/solid/industrial/weld1.png \
groundpieces/solid/industrial/weld2.png \
groundpieces/solid/industrial/weld3.png \
groundpieces/solid/industrial/weld4.png \
groundpieces/solid/industrial/weld5.png \
groundpieces/solid/industrial/weld6.png \
groundpieces/solid/industrial/weld7.png \
groundpieces/solid/industrial/joint1.png \
groundpieces/solid/industrial/joint2.png \
groundpieces/solid/industrial/joint3.png \
groundpieces/solid/industrial/joint4.png \
groundpieces/solid/industrial/joint5.png \
groundpieces/transparent/foliage/grass1.png \
groundpieces/transparent/foliage/grass10.png \
groundpieces/transparent/foliage/grass11.png \
groundpieces/transparent/foliage/grass12.png \
groundpieces/transparent/foliage/grass13.png \
groundpieces/transparent/foliage/grass14.png \
groundpieces/transparent/foliage/grass15.png \
groundpieces/transparent/foliage/grass16.png \
groundpieces/transparent/foliage/grass2.png \
groundpieces/transparent/foliage/grass3.png \
groundpieces/transparent/foliage/grass4.png \
groundpieces/transparent/foliage/grass5.png \
groundpieces/transparent/foliage/grass6.png \
groundpieces/transparent/foliage/grass7.png \
groundpieces/transparent/foliage/grass8.png \
groundpieces/transparent/foliage/grass9.png \
exits/desert_tut.png \
exits/ice.png \
exits/stone.png \
exits/desertexit.png \
exits/space.png \
exits/sweetexit.png \
exits/sortie.png \
exits/sortie_anim.png \
exits/industrial.png \
exits/crystal.png \
entrances/entrance.png \
entrances/generic.png \
entrances/woodthing_nmov.png \
entrances/woodthing_mov.png \
entrances/cloudent.png \
entrances/space.png \
entrances/wood_bottom.png \
entrances/wood_top.png \
entrances/eyes_entrance.png \
entrances/eyes_entrance_anim.png \
entrances/eyes_underlay.png \
entrances/industrial.png \
entrances/industrial_top.png \
groundpieces/bridge/space/grid1.png \
groundpieces/bridge/space/grid2.png \
groundpieces/bridge/space/grid3.png \
groundpieces/bridge/misc/bridge_left.png \
groundpieces/bridge/misc/bridge_right.png \
groundpieces/ground/test/test1.png \
groundpieces/ground/test/test2.png \
groundpieces/ground/test/test3.png \
groundpieces/ground/test/test4.png \
groundpieces/ground/test/test5.png \
groundpieces/ground/test/test6.png \
groundpieces/ground/mushroom/toadstool1.png \
groundpieces/ground/mushroom/toadstool2.png \
groundpieces/ground/mushroom/toadstool3.png \
groundpieces/ground/mushroom/toadstool4.png \
groundpieces/ground/desert/sluggydu.png \
groundpieces/ground/desert/bigblock-broken1.png \
groundpieces/ground/desert/bigblock-broken2.png \
groundpieces/ground/desert/bigblock-broken3.png \
groundpieces/ground/desert/bigdune1.png \
groundpieces/ground/desert/bigprickpiece.png \
groundpieces/ground/desert/blobdune.png \
groundpieces/ground/desert/column_piece1.png \
groundpieces/ground/desert/column_piece2.png \
groundpieces/ground/desert/column_piece3.png \
groundpieces/ground/desert/domedune.png \
groundpieces/ground/desert/flatdune.png \
groundpieces/ground/desert/middleprickpiece.png \
groundpieces/ground/desert/peakdune.png \
groundpieces/ground/desert/pillar1.png \
groundpieces/ground/desert/pillar2.png \
groundpieces/ground/desert/pillar3.png \
groundpieces/ground/desert/platform.png \
groundpieces/ground/desert/platform_left.png \
groundpieces/ground/desert/platform_right.png \
groundpieces/ground/desert/smallbrickpiece.png \
groundpieces/ground/snow/cabin.png \
groundpieces/ground/snow/cabin_winter.png \
groundpieces/ground/snow/gpiece1.png \
groundpieces/ground/snow/ice1.png \
groundpieces/ground/snow/ice2.png \
groundpieces/ground/snow/igloo.png \
groundpieces/ground/snow/piece1.png \
groundpieces/ground/snow/piece2.png \
groundpieces/ground/snow/piece3.png \
groundpieces/ground/snow/piece7.png \
groundpieces/ground/snow/piece8.png \
groundpieces/ground/snow/piece9.png \
groundpieces/ground/snow/slopedr.png \
groundpieces/ground/snow/snowman.png \
groundpieces/ground/snow/xmas-tree.png \
groundpieces/ground/jungle/branch1.png \
groundpieces/ground/jungle/branch2.png \
groundpieces/ground/jungle/branch3.png \
groundpieces/ground/jungle/branch4.png \
groundpieces/ground/jungle/branch5.png \
groundpieces/ground/jungle/branch6.png \
groundpieces/ground/jungle/carabatree.png \
groundpieces/ground/jungle/carabatreemedium.png \
groundpieces/ground/jungle/carabatreesmall.png \
groundpieces/ground/jungle/stick1.png \
groundpieces/ground/jungle/stick2.png \
groundpieces/ground/jungle/stick3.png \
groundpieces/ground/jungle/stick4.png \
groundpieces/ground/jungle/stick5.png \
groundpieces/ground/jungle/twist.png \
groundpieces/ground/jungle/twistsmooth.png \
groundpieces/ground/industrial/pipe1.png \
groundpieces/ground/industrial/pipe2.png \
groundpieces/ground/industrial/pipe3.png \
groundpieces/ground/industrial/pipe4.png \
groundpieces/ground/industrial/pipe5.png \
groundpieces/ground/industrial/pipe6.png \
groundpieces/ground/industrial/pipe7.png \
groundpieces/ground/industrial/pipe8.png \
groundpieces/ground/industrial/pipe_bl.png \
groundpieces/ground/industrial/pipe_br.png \
groundpieces/ground/industrial/pipe_ul.png \
groundpieces/ground/industrial/pipe_ur.png \
groundpieces/ground/misc/bpiece2.png \
groundpieces/ground/misc/bpiece3.png \
groundpieces/ground/misc/bpiece4.png \
groundpieces/ground/misc/bpiece1.png \
groundpieces/ground/misc/bpiece5.png \
groundpieces/ground/misc/bpiece6.png \
groundpieces/ground/misc/brick1.png \
groundpieces/ground/misc/brick2.png \
groundpieces/ground/misc/brick3.png \
groundpieces/ground/misc/brick4.png \
groundpieces/ground/misc/brick5.png \
groundpieces/ground/misc/bridge1.png \
groundpieces/ground/misc/bpice1.png \
groundpieces/ground/misc/dragon.png \
groundpieces/ground/misc/green1.png \
groundpieces/ground/misc/green2.png \
groundpieces/ground/misc/colum.png \
groundpieces/ground/misc/colum_flat.png \
groundpieces/ground/misc/grey_stone1.png \
groundpieces/ground/misc/grey_stone2.png \
groundpieces/ground/misc/grey_stone3.png \
groundpieces/ground/misc/grey_stone4.png \
groundpieces/ground/misc/pfosten.png \
groundpieces/ground/misc/grey_stone5.png \
groundpieces/ground/misc/grey_stone6.png \
groundpieces/ground/misc/piece1.png \
groundpieces/ground/misc/piece2.png \
groundpieces/ground/misc/spike.png \
groundpieces/ground/misc/stoneblock1.png \
groundpieces/ground/misc/stoneblock2.png \
groundpieces/ground/misc/stoneblock3.png \
groundpieces/ground/misc/stoneblock5.png \
groundpieces/ground/misc/stoneblock6.png \
groundpieces/ground/misc/tree.png \
groundpieces/ground/misc/well.png \
groundpieces/ground/misc/stone0.png \
groundpieces/ground/misc/stone1.png \
groundpieces/ground/misc/stone2.png \
groundpieces/ground/misc/bpice4.png \
groundpieces/ground/misc/bpice5.png \
groundpieces/ground/misc/bpice6.png \
groundpieces/ground/crystal/block.png \
groundpieces/ground/crystal/column.png \
groundpieces/ground/crystal/diagcrystal.png \
groundpieces/ground/crystal/hexcrystal.png \
groundpieces/ground/crystal/horiz.png \
groundpieces/ground/crystal/horiz2.png \
groundpieces/ground/crystal/pipe.png \
groundpieces/ground/crystal/pipeend.png \
groundpieces/ground/crystal/platform.png \
groundpieces/ground/crystal/platform2.png \
groundpieces/ground/crystal/pointleft.png \
groundpieces/ground/crystal/pointright.png \
groundpieces/ground/crystal/skinnycrystal.png \
groundpieces/ground/crystal/smcrystal.png \
groundpieces/ground/crystal/tesselate.png \
groundpieces/ground/foliage/flax1.png \
groundpieces/ground/foliage/flax2.png \
groundpieces/ground/foliage/midtree1.png \
groundpieces/ground/foliage/midtree2.png \
groundpieces/ground/foliage/oak1.png \
groundpieces/ground/foliage/smallbush.png \
groundpieces/ground/foliage/smallbush2.png \
groundpieces/ground/foliage/smallbush3.png \
groundpieces/ground/foliage/talltree.png \
groundpieces/ground/rock/rock1.png \
groundpieces/ground/rock/rock2.png \
groundpieces/ground/rock/rock3.png \
groundpieces/ground/rock/rock4.png \
groundpieces/ground/rock/rock5.png \
groundpieces/ground/rock/rock6.png \
groundpieces/ground/rock/blackrock2.png \
groundpieces/ground/rock/blackrock3.png \
groundpieces/ground/rock/blackrock4.png \
groundpieces/ground/rock/blackrock1.png \
groundpieces/ground/sortie/column.png \
groundpieces/ground/sortie/column2.png \
groundpieces/ground/sortie/column3.png \
groundpieces/ground/sortie/plate_forme.png \
groundpieces/ground/sortie/plate_forme_left.png \
groundpieces/ground/sortie/plate_forme_right.png \
groundpieces/ground/space/block1.png \
groundpieces/ground/space/way.png \
groundpieces/ground/space/diagonal.png \
groundpieces/ground/space/diagonalr.png \
groundpieces/ground/space/smallblock1.png \
groundpieces/ground/space/smallblock2.png \
groundpieces/ground/space/smallblock3.png \
groundpieces/ground/space/smalltower.png \
groundpieces/ground/space/tower1.png \
groundpieces/ground/sweets/jube2.png \
groundpieces/ground/sweets/lollipop.png \
groundpieces/ground/sweets/lollipop-purp.png \
groundpieces/ground/sweets/allsort1.png \
groundpieces/ground/sweets/allsort2.png \
groundpieces/ground/sweets/aquachoc.png \
groundpieces/ground/sweets/cake1.png \
groundpieces/ground/sweets/cake2.png \
groundpieces/ground/sweets/cake3.png \
groundpieces/ground/sweets/cake4.png \
groundpieces/ground/sweets/cake5.png \
groundpieces/ground/sweets/canestalk.png \
groundpieces/ground/sweets/canestub.png \
groundpieces/ground/sweets/canetop.png \
groundpieces/ground/sweets/chocbar.png \
groundpieces/ground/sweets/chocbloc-lowleft.png \
groundpieces/ground/sweets/chocbloc-lowright.png \
groundpieces/ground/sweets/chocbloc-topleft.png \
groundpieces/ground/sweets/chocbloc-topright.png \
groundpieces/ground/sweets/chocbloc.png \
groundpieces/ground/sweets/goldchoc.png \
groundpieces/ground/sweets/greenjellybaby.png \
groundpieces/ground/sweets/icecream.png \
groundpieces/ground/sweets/jube1.png \
groundpieces/ground/sweets/mmblue.png \
groundpieces/ground/sweets/mmbrown.png \
groundpieces/ground/sweets/mmred.png \
groundpieces/ground/sweets/mmyellow.png \
groundpieces/ground/sweets/purpchoc.png \
groundpieces/ground/sweets/purplechoc.png \
groundpieces/ground/sweets/redjellybaby.png \
groundpieces/ground/signposts/arrow_down.png \
groundpieces/ground/signposts/arrow_left.png \
groundpieces/ground/signposts/arrow_right.png \
groundpieces/ground/signposts/arrow_up.png \
groundpieces/ground/signposts/danger.png \
groundpieces/ground/real/fish.png \
groundpieces/ground/real/green1.png \
groundpieces/ground/real/green2.png \
groundpieces/ground/real/real1.png \
groundpieces/ground/real/real10.png \
groundpieces/ground/real/real11.png \
groundpieces/ground/real/real12.png \
groundpieces/ground/real/real13.png \
groundpieces/ground/real/real14.png \
groundpieces/ground/real/real15.png \
groundpieces/ground/real/real16.png \
groundpieces/ground/real/real17.png \
groundpieces/ground/real/real18.png \
groundpieces/ground/real/real19.png \
groundpieces/ground/real/real2.png \
groundpieces/ground/real/real20.png \
groundpieces/ground/real/real21.png \
groundpieces/ground/real/real22.png \
groundpieces/ground/real/real23.png \
groundpieces/ground/real/real24.png \
groundpieces/ground/real/real25.png \
groundpieces/ground/real/real26.png \
groundpieces/ground/real/real27.png \
groundpieces/ground/real/real28.png \
groundpieces/ground/real/real29.png \
groundpieces/ground/real/real3.png \
groundpieces/ground/real/real30.png \
groundpieces/ground/real/real31.png \
groundpieces/ground/real/real32.png \
groundpieces/ground/real/real33.png \
groundpieces/ground/real/real34.png \
groundpieces/ground/real/real35.png \
groundpieces/ground/real/real36.png \
groundpieces/ground/real/real37.png \
groundpieces/ground/real/real4.png \
groundpieces/ground/real/real5.png \
groundpieces/ground/real/real6.png \
groundpieces/ground/real/real7.png \
groundpieces/ground/real/real8.png \
groundpieces/ground/real/real9.png \
groundpieces/remove/misc/column1.png \
groundpieces/remove/misc/rect1.png \
groundpieces/solid/rock/granit1.png \
groundpieces/solid/rock/granit2.png \
groundpieces/solid/rock/granit3.png \
groundpieces/solid/rock/granit4.png \
groundpieces/solid/rock/granit5.png \
groundpieces/solid/rock/granit6.png \
groundpieces/solid/crystal/rectsolid.png \
groundpieces/solid/crystal/smallsolid.png \
groundpieces/solid/crystal/squaresolid.png \
groundpieces/solid/misc/metalplate_horiz.png \
groundpieces/solid/misc/metalplate_large.png \
groundpieces/solid/misc/metalplate_small.png \
groundpieces/solid/industrial/weld7.png \
groundpieces/solid/industrial/weld6.png \
groundpieces/solid/industrial/weld5.png \
groundpieces/solid/industrial/weld4.png \
groundpieces/solid/industrial/weld3.png \
groundpieces/solid/industrial/weld2.png \
groundpieces/solid/industrial/weld1.png \
groundpieces/solid/industrial/steel5.png \
groundpieces/solid/industrial/steel4.png \
groundpieces/solid/industrial/steel3.png \
groundpieces/solid/industrial/steel2.png \
groundpieces/solid/industrial/steel1.png \
groundpieces/solid/industrial/screw.png \
groundpieces/solid/industrial/rivet.png \
groundpieces/solid/industrial/joint5.png \
groundpieces/solid/industrial/joint4.png \
groundpieces/solid/industrial/joint3.png \
groundpieces/solid/industrial/joint2.png \
groundpieces/solid/industrial/joint1.png \
groundpieces/solid/industrial/greybri5.png \
groundpieces/solid/industrial/greybri3.png \
groundpieces/solid/industrial/greybri2.png \
groundpieces/solid/industrial/greybri1.png \
groundpieces/transparent/misc/weed2.png \
groundpieces/transparent/misc/weed1.png \
groundpieces/transparent/foliage/grass1.png \
groundpieces/transparent/foliage/grass10.png \
groundpieces/transparent/foliage/grass11.png \
groundpieces/transparent/foliage/grass12.png \
groundpieces/transparent/foliage/grass13.png \
groundpieces/transparent/foliage/grass14.png \
groundpieces/transparent/foliage/grass15.png \
groundpieces/transparent/foliage/grass16.png \
groundpieces/transparent/foliage/grass2.png \
groundpieces/transparent/foliage/grass3.png \
groundpieces/transparent/foliage/grass4.png \
groundpieces/transparent/foliage/grass5.png \
groundpieces/transparent/foliage/grass6.png \
groundpieces/transparent/foliage/grass7.png \
groundpieces/transparent/foliage/grass8.png \
groundpieces/transparent/foliage/grass9.png \
groundpieces/transparent/foliage/turfconcave.png \
groundpieces/transparent/foliage/turfflat.png \
groundpieces/transparent/foliage/turfslopeleft.png \
groundpieces/transparent/foliage/turfslopeleft20.png \
groundpieces/transparent/foliage/turfsloperight.png \
groundpieces/transparent/foliage/turfsloperight20.png \
groundpieces/transparent/foliage/turfsmallbump.png \
groundpieces/transparent/foliage/turfsmallnook.png \
groundpieces/transparent/foliage/turftufty.png \
groundpieces/transparent/industrial/gunge1.png \
groundpieces/transparent/industrial/gunge10.png \
groundpieces/transparent/industrial/gunge11.png \
groundpieces/transparent/industrial/gunge12.png \
groundpieces/transparent/industrial/gunge13.png \
groundpieces/transparent/industrial/gunge14.png \
groundpieces/transparent/industrial/gunge15.png \
groundpieces/transparent/industrial/gunge2.png \
groundpieces/transparent/industrial/gunge3.png \
groundpieces/transparent/industrial/gunge4.png \
groundpieces/transparent/industrial/gunge5.png \
groundpieces/transparent/industrial/gunge6.png \
groundpieces/transparent/industrial/gunge7.png \
groundpieces/transparent/industrial/gunge8.png \
groundpieces/transparent/industrial/gunge9.png \
hotspots/misc/bridge.png \
hotspots/misc/tree.png \
hotspots/misc/old/bridge2.png \
hotspots/space/engine.png \
hotspots/signposts/arrow_east.png \
hotspots/signposts/arrow_north.png \
hotspots/signposts/arrow_northeast.png \
hotspots/signposts/arrow_northwest.png \
hotspots/signposts/arrow_south.png \
hotspots/signposts/arrow_southeast.png \
hotspots/signposts/arrow_southwest.png \
hotspots/signposts/arrow_west.png \
hotspots/signposts/basher.png \
hotspots/signposts/blocker.png \
hotspots/signposts/bomber.png \
hotspots/signposts/bridger.png \
hotspots/signposts/climber.png \
hotspots/signposts/digger.png \
hotspots/signposts/floater.png \
hotspots/signposts/miner.png \
hotspots/signposts/nogo.png \
liquids/water_cmap.png \
liquids/water.png \
liquids/water2.png \
liquids/water3.png \
liquids/water4.tga \
liquids/water3.tga \
liquids/swater.png \
liquids/lava.png \
liquids/slime.tga \
pingus/bomber.png \
pingus/basher.png \
pingus/climber.png \
pingus/faller.png \
pingus/faller.png \
pingus/tumble.png \
pingus/bridger.png \
pingus/walker.png \
pingus/blocker.png \
pingus/floater.png \
pingus/digger.png \
pingus/miner.png \
pingus/splash.png \
pingus/splash_debris.png \
pingus/splat.png \
pingus/exit.png \
pingus/drownfall.png \
pingus/drownwalk.png \
pingus/bomber1.png \
pingus/basher1.png \
pingus/climber1.png \
pingus/faller1.png \
pingus/faller1.png \
pingus/tumble1.png \
pingus/bridger1.png \
pingus/walker1.png \
pingus/blocker1.png \
pingus/floater1.png \
pingus/digger1.png \
pingus/miner1.png \
pingus/exit1.png \
pingus/drownfall1.png \
pingus/bomber2.png \
pingus/basher2.png \
pingus/climber2.png \
pingus/faller2.png \
pingus/faller2.png \
pingus/tumble2.png \
pingus/bridger2.png \
pingus/walker2.png \
pingus/blocker2.png \
pingus/floater2.png \
pingus/digger2.png \
pingus/miner2.png \
pingus/exit2.png \
pingus/drownfall2.png \
pingus/bomber3.png \
pingus/basher3.png \
pingus/climber3.png \
pingus/faller3.png \
pingus/faller3.png \
pingus/tumble3.png \
pingus/bridger3.png \
pingus/walker3.png \
pingus/blocker3.png \
pingus/floater3.png \
pingus/digger3.png \
pingus/miner3.png \
pingus/exit3.png \
pingus/drownfall3.png \
pingus/brick_right.png \
pingus/brick_left.png \
pingus/bash_radius.png \
pingus/digger_radius.png \
pingus/bomber_radius.png \
pingus/explo0.png \
pingus/explo1.png \
pingus/explo2.png \
pingus/explo3.png \
pingus/xmas-walker.png \
particles/particle.png \
particles/ground.tga \
particles/smoke.tga \
particles/smoke2.tga \
particles/snow1.png \
particles/snow2.png \
particles/snow3.png \
particles/snow4.png \
particles/snow5.png \
particles/ground_snow.png \
particles/rain_splash.png \
particles/rain1.png \
particles/rain2.png \
story/story0.jpg \
story/story1.jpg \
story/story2.jpg \
story/story3.jpg \
textures/fruitcaketile.jpg \
textures/default.png \
textures/industrial.jpg \
textures/clouds.jpg \
textures/crystal.jpg \
textures/stones.png \
textures/rocktile.jpg \
textures/rooftile.jpg \
textures/rooftile2.jpg \
textures/rockagglo.jpg \
textures/icetile.jpg \
textures/lunartile.jpg \
textures/blueflame.jpg \
textures/stone.jpg \
textures/flamebg.jpg \
textures/anim_fire.jpg \
textures/stars.jpg \
textures/enchantedjungle.jpg \
textures/darkjungle.jpg \
textures/latejungle.jpg \
textures/nightjungle.jpg \
textures/happyclouds.jpg \
textures/desert.jpg \
textures/desert_room.jpg \
textures/sortie.jpg \
textures/cyanspace.jpg \
textures/bwsortiebg.jpg \
textures/green_tendrils.png \
textures/mountain.png \
textures/thunderstorm.png \
traps/tut.png \
traps/smasher.png \
traps/smasher_cmap.png \
traps/hammer.png \
traps/fake_exit.png \
traps/spike.png \
traps/guillotinekill.png \
traps/guillotineidle.png \
traps/laser_exit.png \
traps/bumper.png \
traps/bumper_cmap.png \
worldmaps/volcano.jpg \
worldobjs/teleporter.png \
worldobjs/teleporter2.png \
worldobjs/iceblock.png \
worldobjs/iceblock_cmap.png \
worldobjs/conveyorbelt_left.png \
worldobjs/conveyorbelt_middle.png \
worldobjs/conveyorbelt_right.png \
worldobjs/conveyorbelt_cmap.png \
worldobjs/switchdoor_box.png \
worldobjs/switchdoor_switch.png \
worldobjs/switchdoor_tile.png \
worldobjs/switchdoor_tile_cmap.png

my_pkg_data = $(EXTRA_DIST)

# We don't use automake's stuff to install the data, since it is
# unable to handle recursive directory trees.
# The list was produced by:
# find . -type d -and -not -name "CVS" -and -not -name ".xvpics"  | sed "s/^\./\$(pkgdatadir)/" | sed "s/\$/ \\\\/"
install-data-local: $(my_pkg_data)
	$(mkinstalldirs) \
$(pkgdatadir) \
$(pkgdatadir)/banners \
$(pkgdatadir)/backgrounds \
$(pkgdatadir)/entrances \
$(pkgdatadir)/entrances/sortie \
$(pkgdatadir)/exits \
$(pkgdatadir)/fonts \
$(pkgdatadir)/groundpieces \
$(pkgdatadir)/groundpieces/bridge \
$(pkgdatadir)/groundpieces/bridge/space \
$(pkgdatadir)/groundpieces/bridge/misc \
$(pkgdatadir)/groundpieces/misc \
$(pkgdatadir)/groundpieces/sweets \
$(pkgdatadir)/groundpieces/solid \
$(pkgdatadir)/groundpieces/solid/rock \
$(pkgdatadir)/groundpieces/solid/crystal \
$(pkgdatadir)/groundpieces/solid/misc \
$(pkgdatadir)/groundpieces/transparent \
$(pkgdatadir)/groundpieces/transparent/misc \
$(pkgdatadir)/groundpieces/transparent/foliage \
$(pkgdatadir)/groundpieces/transparent/industrial \
$(pkgdatadir)/groundpieces/ground \
$(pkgdatadir)/groundpieces/ground/test \
$(pkgdatadir)/groundpieces/ground/mushroom \
$(pkgdatadir)/groundpieces/ground/desert \
$(pkgdatadir)/groundpieces/ground/snow \
$(pkgdatadir)/groundpieces/ground/jungle \
$(pkgdatadir)/groundpieces/ground/industrial \
$(pkgdatadir)/groundpieces/ground/misc \
$(pkgdatadir)/groundpieces/ground/crystal \
$(pkgdatadir)/groundpieces/ground/foliage \
$(pkgdatadir)/groundpieces/ground/rock \
$(pkgdatadir)/groundpieces/ground/sortie \
$(pkgdatadir)/groundpieces/ground/space \
$(pkgdatadir)/groundpieces/ground/sweets \
$(pkgdatadir)/groundpieces/ground/signposts \
$(pkgdatadir)/hotspots \
$(pkgdatadir)/hotspots/misc \
$(pkgdatadir)/hotspots/space \
$(pkgdatadir)/hotspots/signposts \
$(pkgdatadir)/liquids \
$(pkgdatadir)/menu \
$(pkgdatadir)/particles \
$(pkgdatadir)/textures \
$(pkgdatadir)/textures/.axvpixs \
$(pkgdatadir)/themes \
$(pkgdatadir)/traps \
$(pkgdatadir)/buttons \
$(pkgdatadir)/story \
$(pkgdatadir)/misc \
$(pkgdatadir)/worldmaps \
$(pkgdatadir)/worldobjs \
$(pkgdatadir)/core \
$(pkgdatadir)/core/cursors \
$(pkgdatadir)/core/editor \
$(pkgdatadir)/core/buttons \
$(pkgdatadir)/core/menu \
$(pkgdatadir)/core/misc \
$(pkgdatadir)/core/worldmap \
$(pkgdatadir)/core/pingus \
$(pkgdatadir)/core/gui \
$(pkgdatadir)/core/gui/gui \
$(pkgdatadir)/core/gui/button \
$(pkgdatadir)/core/gui/checkbox \
$(pkgdatadir)/core/gui/combobox \
$(pkgdatadir)/core/gui/listbox \
$(pkgdatadir)/core/gui/menu \
$(pkgdatadir)/core/gui/scrollbar \
$(pkgdatadir)/cursors \
$(pkgdatadir)/pingus
	@$(NORMAL_INSTALL)
	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir)
	@list='$(my_pkg_data)'; for p in $$list; do \
	  if test -f $(srcdir)/$$p; then \
	    echo " $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(pkgdatadir)/$$p"; \
	    $(INSTALL_DATA) $(srcdir)/$$p $(DESTDIR)$(pkgdatadir)/$$p; \
	  else if test -f $$p; then \
	    echo " $(INSTALL_DATA) $$p $(DESTDIR)$(pkgdatadir)/$$p"; \
	    $(INSTALL_DATA) $$p $(DESTDIR)$(pkgdatadir)/$$p; \
	  fi; fi; \
	done

# cat ../data/*.scr | sed -n "s/^[ 	]*[A-Za-z0-9_]*[ 	]*=[ 	]*\([^ ]*\) (.*);/\1/p"

## EOF ##